[package]
name = "gpt_md_translator"
version = "0.1.0"
authors = [ "Riccardo Sacchetto <rsacchetto(at)nexxontech(dot)it" ]
description = "Use AI to translate your text while preserving the Markdown formatting"
license = "GPL-3.0-or-later"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-openai = "0.23"
bpaf = "0.9"
config = "0.14"
log = "0.4"
once_cell = "1.19"
simplelog = "0.12"
tiktoken-rs = "0.5"
tokio = { version = "1.39", features = [ "full" ] }
